save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -72,8 +72,9 @@
          </div>
 
          <p>One can find that <a class="qname" href="#wasGeneratedBy">prov:wasGeneratedBy</a> 
-            can be qualified using the qualification property <a class="qname" href='#qualifiedGeneration'>prov:qualifiedGeneration</a> 
-            and the class <a class="qname" href='#Generation'>prov:Generation</a> (a subclass of <a class ="qname" href="#ActivityInfluence">prov:ActivityInfluence</a>). 
+            can be qualified using the qualification property <a class="qname" href='#qualifiedGeneration'>prov:qualifiedGeneration</a>,
+            the class <a class="qname" href='#Generation'>prov:Generation</a> (a subclass of <a class ="qname" href="#ActivityInfluence">prov:ActivityInfluence</a>),
+            and the property <a class="qname" href='#activity'>prov:activity</a>.
             From this, the influence relation above can be restated with the <em>qualification pattern</em> as:
          </p>
 
