save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -92,7 +92,7 @@
             :e1Gen 
                a prov:Generation;
                prov:activity            :a1;    # Cite the influencing Activity.
-               ex:foo                   :bar;   # Describe the Activity's influence upon the Entity.
+               ex:foo                   :bar;   # Describe the Activity :a1's influence upon the Entity :e1.
             .
 
             :a1 a prov:Activity .
