save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -197,7 +197,7 @@
             <p>The <span class="repeated">prov:qualifiedAssociation</span> property parallels the 
             <span class="repeated">prov:wasAssociatedWith</span> property to provide an additional description about the <code>:illustrationActivity</code> that Derek influenced. 
             The instance of <span class="repeated">prov:Association</span> cites the influencing agent (<code>:derek</code>) that followed the instructions (<code>:tutorial_blog</code>). 
-            Further, Derek served the role of illustrationist during the activity.
+            Further, Derek served the role of <code>:illustrationist</code> during the activity.
             </p>
               <pre class="example">{% include "includes/eg16-journalism-qualified-association.ttl" %}</pre>
         </div>
