save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -214,7 +214,7 @@
          </p>
         <div class="exampleOuter">
            <div><b>Qualified Generation</b></div>
-            <p>The <span class="repeated">prov:qualifiedGeneration</span> property parallels the <span class="repeated">prov:wasGeneratedBy</span> property to provide an additional description to <code>:chart1</code>. The instance of <span class="repeated">prov:Generation</span> cites the time (2011-07-14T15:52:14Z) that the activity (<code>:illustrationActivity</code>) generated the chart (<code>:chart1</code>).
+            <p>The <span class="repeated">prov:qualifiedGeneration</span> property parallels the <span class="repeated">prov:wasGeneratedBy</span> property to provide an additional description to <code>:bar_chart</code>. The instance of <span class="repeated">prov:Generation</span> cites the time (2011-07-14T15:52:14Z) that the activity (<code>:illustrationActivity</code>) generated the chart (<code>:bar_chart</code>).
             </p>
               <pre class="example">{% include "includes/eg16-journalism-qualified-generation.ttl" %}</pre>
         </div>
@@ -226,9 +226,11 @@
          </p>
         <div class="exampleOuter">
            <div><b>Qualified Derivation</b></div>
-            <p>The <span class="repeated">prov:qualifiedDerivation</span> property parallels the <span class="repeated">prov:wasDerivedFrom</span> property to provide an additional description to <code>:chart1</code>. The instance of <span class="repeated">prov:Derivation</span> cites the activity (<code>:illustrationActivity</code>) and the Usages and Generations that the activity conduced to create the chart (<code>:chart1</code>).
-            </p>
-              <pre class="example">{% include "includes/eg16-journalism-qualified-derivation.ttl" %}</pre>
+           <p>The <span class="repeated">prov:qualifiedDerivation</span> property parallels the <span class="repeated">prov:wasDerivedFrom</span> 
+              property to provide an additional description to <code>:bar_chart</code>. The instance of <span class="repeated">prov:Derivation</span> 
+              cites the activity (<code>:illustrationActivity</code>) and the Usages and Generations that the activity conduced to create the <code>:bar_chart</code>.
+           </p>
+           <pre class="example">{% include "includes/eg16-journalism-qualified-derivation.ttl" %}</pre>
         </div>
       </div>
 
