note to use specific form

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -52,7 +52,9 @@
          <a class="qname" href="#AgentInfluence">prov:AgentInfluence</a>, which determine the property used to cite the influencing resource (either
          <a class="qname" href="#entity">prov:entity</a>,
          <a class="qname" href="#activity">prov:activity</a>, or
-         <a class="qname" href="#agent">prov:agent</a>, respectively).
+         <a class="qname" href="#agent">prov:agent</a>, respectively). 
+         Because <span class="repeated">prov:Influence</span> is a broad relation, its most specific subclasses (e.g. <span class="repeated">prov:Communication</span>, 
+         <span class="repeated">prov:Delegation</span>, <span class="repeated">prov:End</span>, <span class="repeated">prov:Revision</span>, etc.) should be used when applicable.
 
          <div id="narrative-example-qualified-1" about="#narrative-example-qualified-1" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
             <p>
