html produced for CR

--- a/components/services/prov-o/includes/cross-reference-qualified.html
+++ b/components/services/prov-o/includes/cross-reference-qualified.html
@@ -22,9 +22,9 @@
     </div>
 
     <dl class="description">
-    <dd class="comment"><p>ActivityInfluence provides additional descriptions of an Activity's binary influence upon any other kind of resource. Instances of ActivityInfluence use the prov:activity property to cite the influencing Activity.</p>
-    </dd>
     <dd class="comment"><p>It is not recommended that the type ActivityInfluence be asserted without also asserting one of its more specific subclasses.</p>
+    </dd>
+    <dd class="comment"><p>ActivityInfluence provides additional descriptions of an Activity's binary influence upon any other kind of resource. Instances of ActivityInfluence use the prov:activity property to cite the influencing Activity.</p>
     </dd>
 
       <dt>is subclass of</dt>
@@ -40,13 +40,13 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#influencer" href="#influencer">prov:influencer</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#influencer" href="#influencer">prov:influencer</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>has subclasses</dt>
       <dd>
         <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
-        , <a title="http://www.w3.org/ns/prov#Communication" href="#Communication" class="owlclass">prov:Communication</a>
         , <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
+        , <a title="http://www.w3.org/ns/prov#Communication" href="#Communication" class="owlclass">prov:Communication</a>
       </dd>
     </dl>
   </div>
@@ -88,7 +88,7 @@
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#influencer" href="#influencer">prov:influencer</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#influencer" href="#influencer">prov:influencer</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>has subclasses</dt>
       <dd>
@@ -338,8 +338,8 @@ For example, a student acted on behalf of his supervisor, who acted on behalf of
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt></dt>
@@ -406,7 +406,7 @@ For example, a student acted on behalf of his supervisor, who acted on behalf of
         <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>        , <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -461,14 +461,14 @@ For example, a student acted on behalf of his supervisor, who acted on behalf of
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#influencer" href="#influencer">prov:influencer</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#influencer" href="#influencer">prov:influencer</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>has subclasses</dt>
       <dd>
         <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
         , <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
-        , <a title="http://www.w3.org/ns/prov#Derivation" href="#Derivation" class="owlclass">prov:Derivation</a>
         , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
+        , <a title="http://www.w3.org/ns/prov#Derivation" href="#Derivation" class="owlclass">prov:Derivation</a>
       </dd>
     </dl>
   </div>
@@ -550,9 +550,9 @@ For example, a student acted on behalf of his supervisor, who acted on behalf of
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>
-        , <a title="http://www.w3.org/ns/prov#influencer" href="#influencer">prov:influencer</a> <sup class="type-op" title="object property">op</sup>
+        <a title="http://www.w3.org/ns/prov#influencer" href="#influencer">prov:influencer</a> <sup class="type-op" title="object property">op</sup>
         , <a title="http://www.w3.org/ns/prov#hadRole" href="#hadRole">prov:hadRole</a> <sup class="type-op" title="object property">op</sup>
+        , <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>
       </dd>
 
       <dt>in range of</dt>
@@ -612,10 +612,10 @@ For example, a student acted on behalf of his supervisor, who acted on behalf of
       <dt>has subclasses</dt>
       <dd>
         <a title="http://www.w3.org/ns/prov#Invalidation" href="#Invalidation" class="owlclass">prov:Invalidation</a>
-        , <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
         , <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
-        , <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
         , <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
+        , <a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a>
+        , <a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a>
       </dd>
     </dl>
   </div>
@@ -741,7 +741,7 @@ A primary source relation is a particular case of derivation of secondary materi
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -789,7 +789,7 @@ A primary source relation is a particular case of derivation of secondary materi
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -837,7 +837,7 @@ A primary source relation is a particular case of derivation of secondary materi
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#hadUsage" href="#hadUsage">prov:hadUsage</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#hadGeneration" href="#hadGeneration">prov:hadGeneration</a>  <sup class="type-op" title="object property">op</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -920,7 +920,7 @@ A primary source relation is a particular case of derivation of secondary materi
         <a title="http://www.w3.org/ns/prov#hadActivity" href="#hadActivity">prov:hadActivity</a> <sup class="type-op" title="object property">op</sup>
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>        , <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -969,7 +969,7 @@ A primary source relation is a particular case of derivation of secondary materi
 
       <dt></dt>
       <dd>
-        <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>        , <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>      </dd>
+        <a title="http://www.w3.org/ns/prov#entity" href="#entity">prov:entity</a>  <sup class="type-op" title="object property">op</sup>        , <a title="http://www.w3.org/ns/prov#atTime" href="#atTime">prov:atTime</a>  <sup class="type-dp" title="data property">dp</sup>      </dd>
 
       <dt>in range of</dt>
       <dd>
@@ -1226,13 +1226,13 @@ A primary source relation is a particular case of derivation of secondary materi
         <dd>
           <ul>
             <li>
+              <a title="http://www.w3.org/ns/prov#Influence" href="#Influence" class="owlclass">prov:Influence</a>
+            </li>
+            <li>
               <a title="http://www.w3.org/ns/prov#Delegation" href="#Delegation" class="owlclass">prov:Delegation</a>
                or <a title="http://www.w3.org/ns/prov#Derivation" href="#Derivation" class="owlclass">prov:Derivation</a>
                or <a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a>
                or <a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a>
-            </li>
-            <li>
-              <a title="http://www.w3.org/ns/prov#Influence" href="#Influence" class="owlclass">prov:Influence</a>
             </li>
           </ul>
         </dd>
@@ -1381,11 +1381,11 @@ A primary source relation is a particular case of derivation of secondary materi
         <dd>
           <ul>
             <li>
-              <a title="http://www.w3.org/ns/prov#Influence" href="#Influence" class="owlclass">prov:Influence</a>
-            </li>
-            <li>
               <a title="http://www.w3.org/ns/prov#Association" href="#Association" class="owlclass">prov:Association</a>
                or <a title="http://www.w3.org/ns/prov#InstantaneousEvent" href="#InstantaneousEvent" class="owlclass">prov:InstantaneousEvent</a>
+            </li>
+            <li>
+              <a title="http://www.w3.org/ns/prov#Influence" href="#Influence" class="owlclass">prov:Influence</a>
             </li>
           </ul>
         </dd>
@@ -1484,6 +1484,14 @@ A primary source relation is a particular case of derivation of secondary materi
           <ul>
             <li>
               <a title="http://www.w3.org/ns/prov#Influence" href="#Influence" class="owlclass">prov:Influence</a>
+            </li>
+          </ul>
+        </dd>
+
+        <dt>has range</dt>
+        <dd>
+          <ul>
+            <li>
             </li>
           </ul>
         </dd>
@@ -2016,7 +2024,7 @@ For example, a student acted on behalf of his supervisor, who acted on behalf of
               <a title="http://www.w3.org/ns/prov#qualifiedGeneration" href="#qualifiedGeneration" class="owlclass">prov:qualifiedGeneration</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd" class="owlclass">prov:qualifiedEnd</a>
+              <a title="http://www.w3.org/ns/prov#qualifiedAttribution" href="#qualifiedAttribution" class="owlclass">prov:qualifiedAttribution</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#qualifiedInvalidation" href="#qualifiedInvalidation" class="owlclass">prov:qualifiedInvalidation</a>
@@ -2034,7 +2042,7 @@ For example, a student acted on behalf of his supervisor, who acted on behalf of
               <a title="http://www.w3.org/ns/prov#qualifiedRevision" href="#qualifiedRevision" class="owlclass">prov:qualifiedRevision</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#qualifiedAttribution" href="#qualifiedAttribution" class="owlclass">prov:qualifiedAttribution</a>
+              <a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd" class="owlclass">prov:qualifiedEnd</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#qualifiedPrimarySource" href="#qualifiedPrimarySource" class="owlclass">prov:qualifiedPrimarySource</a>
@@ -2464,7 +2472,7 @@ A primary source relation is a particular case of derivation of secondary materi
     <div class="description">
       <div class="comment "><p>This property has multiple RDFS domains to suit multiple OWL Profiles. See <a href="#prov-o-owl-profile">PROV-O OWL Profile</a>.</p>
       </div>
-      <div class="comment "><p>Because prov:wasInfluencedBy is a broad relation, its more specific subproperties (prov:wasInformedBy, prov:actedOnBehalfOf, prov:wasEndedBy, etc.) should be used when applicable.</p>
+      <div class="comment "><p>Because prov:wasInfluencedBy is a broad relation, its more specific subproperties (e.g. prov:wasInformedBy, prov:actedOnBehalfOf, prov:wasEndedBy, etc.) should be used when applicable.</p>
       </div>
       <dl>
 
@@ -2500,31 +2508,43 @@ A primary source relation is a particular case of derivation of secondary materi
               <a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlclass">prov:actedOnBehalfOf</a>
             </li>
             <li>
+              <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlclass">prov:wasStartedBy</a>
+            </li>
+            <li>
               <a title="http://www.w3.org/ns/prov#wasInvalidatedBy" href="#wasInvalidatedBy" class="owlclass">prov:wasInvalidatedBy</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlclass">prov:wasInformedBy</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlclass">prov:wasGeneratedBy</a>
+              <a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo" class="owlclass">prov:wasAttributedTo</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlclass">prov:wasEndedBy</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo" class="owlclass">prov:wasAttributedTo</a>
-            </li>
-            <li>
               <a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlclass">prov:wasAssociatedWith</a>
             </li>
             <li>
-              <a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlclass">prov:wasStartedBy</a>
+              <a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlclass">prov:wasGeneratedBy</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#wasDerivedFrom" href="#wasDerivedFrom" class="owlclass">prov:wasDerivedFrom</a>
             </li>
             <li>
               <a title="http://www.w3.org/ns/prov#used" href="#used" class="owlclass">prov:used</a>
+            </li>
+          </ul>
+        </dd>
+
+        <dt>can be qualified with</dt>
+        <dd>
+          <ul>
+            <li>
+              <a title="http://www.w3.org/ns/prov#qualifiedInfluence" href="#qualifiedInfluence" class="owlproperty">prov:qualifiedInfluence</a> <sup class="type-op" title="object property">op</sup>
+            </li>
+            <li>
+              <a title="http://www.w3.org/ns/prov#Influence" href="#Influence" class="owlclass">prov:Influence</a>
             </li>
           </ul>
         </dd>
