--- a/components/services/prov-o/includes/qualifed-forms-starting-point.html
+++ b/components/services/prov-o/includes/qualifed-forms-starting-point.html
@@ -1,67 +1,67 @@
 <table class="qualified-forms">
-  <caption><a href="#qualified-forms-starting-point">Table 2</a>: Qualification Property and Influence Class used to qualify a Starting-point Property.</caption>
+  <caption><a href="#qualified-forms-starting-point">Table 2</a>: Qualification Property and Qualified Influence Class used to qualify a Starting-point Property.</caption>
   <tr>
     <th><span title="Influenced Class">Influenced Class</span></th>
     <th><span title="Unqualified Influence">Unqualified Influence</span></th>
+    <th><span title="Influencing Class">Influencing Class</span></th>
     <th><span title="Qualification Property">Qualification Property</span></th>
     <th><span title="Qualified Influence">Qualified Influence</span></th>
     <th><span title="Influencer Property">Influencer Property</span></th>
-    <th><span title="Influencing Class">Influencing Class</span></th>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#Agent" href="#Agent" class="owlclass">prov:Agent</a></td>
     <td><a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlproperty">prov:actedOnBehalfOf</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Agent" href="#Agent" class="owlclass">prov:Agent</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedDelegation" href="#qualifiedDelegation" class="owlproperty">prov:qualifiedDelegation</a></td>
     <td><a title="http://www.w3.org/ns/prov#Delegation" href="#Delegation" class="owlclass">prov:Delegation</a></td>
     <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Agent" href="#Agent" class="owlclass">prov:Agent</a></td>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#Activity" href="#Activity" class="owlclass">prov:Activity</a></td>
     <td><a title="http://www.w3.org/ns/prov#used" href="#used" class="owlproperty">prov:used</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Entity" href="#Entity" class="owlclass">prov:Entity</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedUsage" href="#qualifiedUsage" class="owlproperty">prov:qualifiedUsage</a></td>
     <td><a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a></td>
     <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Entity" href="#Entity" class="owlclass">prov:Entity</a></td>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#Activity" href="#Activity" class="owlclass">prov:Activity</a></td>
     <td><a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlproperty">prov:wasAssociatedWith</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Agent" href="#Agent" class="owlclass">prov:Agent</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedAssociation" href="#qualifiedAssociation" class="owlproperty">prov:qualifiedAssociation</a></td>
     <td><a title="http://www.w3.org/ns/prov#Association" href="#Association" class="owlclass">prov:Association</a></td>
     <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Agent" href="#Agent" class="owlclass">prov:Agent</a></td>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#Entity" href="#Entity" class="owlclass">prov:Entity</a></td>
     <td><a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo" class="owlproperty">prov:wasAttributedTo</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Agent" href="#Agent" class="owlclass">prov:Agent</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedAttribution" href="#qualifiedAttribution" class="owlproperty">prov:qualifiedAttribution</a></td>
     <td><a title="http://www.w3.org/ns/prov#Attribution" href="#Attribution" class="owlclass">prov:Attribution</a></td>
     <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Agent" href="#Agent" class="owlclass">prov:Agent</a></td>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#Entity" href="#Entity" class="owlclass">prov:Entity</a></td>
     <td><a title="http://www.w3.org/ns/prov#wasDerivedFrom" href="#wasDerivedFrom" class="owlproperty">prov:wasDerivedFrom</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Entity" href="#Entity" class="owlclass">prov:Entity</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedDerivation" href="#qualifiedDerivation" class="owlproperty">prov:qualifiedDerivation</a></td>
     <td><a title="http://www.w3.org/ns/prov#Derivation" href="#Derivation" class="owlclass">prov:Derivation</a></td>
     <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Entity" href="#Entity" class="owlclass">prov:Entity</a></td>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#Entity" href="#Entity" class="owlclass">prov:Entity</a></td>
     <td><a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlproperty">prov:wasGeneratedBy</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Activity" href="#Activity" class="owlclass">prov:Activity</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedGeneration" href="#qualifiedGeneration" class="owlproperty">prov:qualifiedGeneration</a></td>
     <td><a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a></td>
     <td><a title="http://www.w3.org/ns/prov#activity" href="#activity" class="owlproperty">prov:activity</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Activity" href="#Activity" class="owlclass">prov:Activity</a></td>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#Activity" href="#Activity" class="owlclass">prov:Activity</a></td>
     <td><a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlproperty">prov:wasInformedBy</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Activity" href="#Activity" class="owlclass">prov:Activity</a></td>
     <td><a title="http://www.w3.org/ns/prov#qualifiedCommunication" href="#qualifiedCommunication" class="owlproperty">prov:qualifiedCommunication</a></td>
     <td><a title="http://www.w3.org/ns/prov#Communication" href="#Communication" class="owlclass">prov:Communication</a></td>
     <td><a title="http://www.w3.org/ns/prov#activity" href="#activity" class="owlproperty">prov:activity</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Activity" href="#Activity" class="owlclass">prov:Activity</a></td>
   </tr>
 </table>
